--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600&display=swap');
 
+
 :root{
 
     /* preset color palette to pick  */
@@ -84,6 +85,62 @@ section{
     display: none ;
 }
 
+/*Section for footer*/
+.footer{
+    background-size: cover;
+    background: url(../images/footer-bg.avif) no-repeat /*fixed*/ center;
+}
+
+.footer .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
+    gap: 3rem;
+}
+
+.footer .box-container .box h3{
+    color: var(--black);
+    font-size: 2.5rem;
+    padding-bottom: 2rem;
+}
+
+.footer .box-container .box a{
+    color: var(--light-black);
+    font-size: 1.5rem;
+    padding-bottom: 1rem;
+    display: block;
+}
+
+.footer .box-container .box a i{
+    color: var(--main-color);
+    padding-right: .5rem;
+    transition: .2s linear ;
+}
+
+.footer .box-container .box a:hover i{
+    padding-right: 2rem;
+}
+
+.footer .credit{
+    text-align: center;
+    padding-top: 3rem;
+    margin-top: 3rem;
+    border-top: .1rem solid var(--light-black);
+    font-size: 2rem;
+    color: var(--black);
+}
+
+.footer .credit span{
+    color: var(--main-color);
+}
+
+
+
+
+
+
+
+
+
 
 /* media queries */
 @media (max-width:1200px) {
@@ -104,7 +161,7 @@ section{
 @media (max-width:768px) { 
     /* 768px */
     #menu-btn{
-        display: inline-block ;
+        display: inline-block;
         transition: .2s linear;
     }
     
@@ -112,14 +169,17 @@ section{
         transform: rotate(180deg);
 
     }
-    .header.navigationBar{
-        position: absolute;
-        top: 99%;left: 0;right: 0;
-        background-color: var(--white);
-        border-top: var(--border);
-        padding: 2rem;
-        clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
-    }
+
+    .header .navigationBar{
+            position: absolute;
+            top: 100%;
+            /*left:0; right:0;*/
+            background-color: var(--white);
+            border-top: var(--border);
+            padding: 2rem;
+            transition: .2s linear;
+            clip-path: polygon(0 0, 100% 0, 100% 0, 0 0);
+        }
 
     .header.navigationBar .active{
         clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
@@ -133,6 +193,6 @@ section{
 
 @media (max-width:450px) {
     html{
-        font-size: 55.5%;
+        font-size: 50%;
     };
 }
