--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,14 @@ section{
     padding: 5rem 10%;
 }
 
+.heading-title{
+    text-align: center;
+    margin-bottom: 3rem;
+    font-size: 6rem;
+    text-transform: uppercase;
+    color: var(--black);
+}
+
 /* format the header */
 .header{
     position: sticky;
@@ -85,6 +93,36 @@ section{
     display: none ;
 }
 
+.services .box-container{
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(16rem, 1fr));
+    gap: 1.5rem;
+}
+
+.services .box-container .box{
+    padding: 3rem 2rem;
+    text-align: center;
+    background: var(--white);
+    cursor: pointer;
+}
+
+.services .box-container .box:hover{
+    background: var(--light-black);
+}
+
+.services .box-container .box img {
+    height: 7rem;
+}
+.services .box-container .box h3 {
+    font-size: 1.7rem;
+    padding-top: 1rem;
+}
+
+
+
+
+
+
 /*Section for footer*/
 .footer{
     background-size: cover;
@@ -106,7 +144,7 @@ section{
 .footer .box-container .box a{
     color: var(--light-black);
     font-size: 1.5rem;
-    padding-bottom: 1rem;
+    padding-bottom: 1.5rem;
     display: block;
 }
 
@@ -194,5 +232,8 @@ section{
 @media (max-width:450px) {
     html{
         font-size: 50%;
-    };
+    }
+    .heading-title{
+        font-size: 3.5rem;
+    }
 }
